adding more templates

--- a/caPractical/templates/index.html
+++ b/caPractical/templates/index.html
@@ -1,9 +1,10 @@
 <html>
 <head></head>
 <body>
-<h1>Welcome to the Landing Page! You have landed!</h1>
 <ul>
-  <li><a href="/logout/">Logout</li>
+  <li><a href="/settings">Edit your settings</a></li>
+  <li><a href="/logout/">Logout</a></li>
 </ul>
+<h1>Welcome to the app!</h1>
 </body>
 </html>
