--- a/caPractical/templates/login.html
+++ b/caPractical/templates/login.html
@@ -12,6 +12,6 @@
 
     <button type="submit">Login</button>
   </form>
-  <a href="/signup/">Sign up!</a>
+  Don't have an account yet? <a href="/signup/">Sign up!</a>
 </body>
 </html>
